<resources>
    <string name="app_name">Virtue Task</string>
    <!-- Strings related to login -->
    <string name="register_email">Email Id</string>
    <string name="register_mobile">Mobile Number</string>
    <string name="register_password">Password</string>
    <string name="register_name">Username</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="promt_forgot_password">Forgot Password ?</string>
    <string name="Promt_Or">Or</string>
    <string name="logoutbtn">Logout</string>
    <string name="fetch_data_from_apibtn">Fetch Data from API</string>
    <string name="reset_passwordbtn">Reset Password</string>
    <string name="todo">TODO</string>
    <string name="forgot_passwordlogin">Forgot Password ?</string>
    <string name="create_new_account">Create New Account</string>
    <string name="already_user">Already User</string>
    <string name="title_activity_fetchdata">Fetchdata</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>
