<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signupbg"
    tools:context=".Registration">

    <Button
        android:id="@+id/Register"
        android:layout_width="303dp"
        android:layout_height="67dp"
        android:layout_marginEnd="55dp"
        android:layout_marginStart="54dp"
        android:background="@drawable/btnsignup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.822" />

    <EditText
        android:id="@+id/Lpassword"
        android:layout_width="302dp"
        android:layout_height="51dp"
        android:layout_marginBottom="23dp"
        android:layout_marginEnd="51dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="5dp"
        android:autofillHints="@string/register_password"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="15dp"
        android:hint="@string/register_password"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/Register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Rmobile"
        app:layout_constraintVertical_bias="0.125" />

    <EditText
        android:id="@+id/Remail"
        android:layout_width="302dp"
        android:layout_height="51dp"
        android:layout_marginEnd="51dp"
        android:layout_marginStart="58dp"
        android:autofillHints="@string/register_email"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="15dp"
        android:hint="@string/register_email"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.538" />

    <EditText
        android:id="@+id/Rmobile"
        android:layout_width="302dp"
        android:layout_height="51dp"
        android:layout_marginEnd="51dp"
        android:layout_marginStart="58dp"
        android:autofillHints="@string/register_mobile"
        android:drawableLeft="@drawable/call"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/register_mobile"
        android:inputType="phone"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.612" />

    <EditText
        android:id="@+id/Rusername"
        android:layout_width="302dp"
        android:layout_height="51dp"
        android:layout_marginEnd="51dp"
        android:layout_marginStart="58dp"
        android:autofillHints="@string/register_name"
        android:drawableLeft="@drawable/user"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/register_name"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="165dp"
        android:layout_marginEnd="190dp"
        android:layout_marginStart="173dp"
        android:layout_marginTop="107dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/Rusername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="19dp"
        android:src="@drawable/facebooklogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Register" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:layout_marginEnd="68dp"
        android:layout_marginTop="19dp"
        android:src="@drawable/googlelogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/Register" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="59dp"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="14dp"
        android:text="@string/Promt_Or"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/Register" />

    <TextView
        android:id="@+id/logintext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="161dp"
        android:layout_marginStart="170dp"
        android:layout_marginTop="32dp"
        android:text="@string/already_user"
        android:textColor="#3949AB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
</androidx.constraintlayout.widget.ConstraintLayout>