<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    tools:context=".Login">

    <Button
        android:id="@+id/login"
        android:layout_width="303dp"
        android:layout_height="67dp"
        android:layout_marginBottom="11dp"
        android:layout_marginEnd="54dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/btnlogin"
        app:layout_constraintBottom_toTopOf="@+id/FPLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Lpassword" />

    <EditText
        android:id="@+id/Lpassword"
        android:layout_width="302dp"
        android:layout_height="51dp"
        android:layout_marginBottom="19dp"
        android:layout_marginEnd="51dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/register_password"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="15dp"
        android:hint="@string/register_password"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/Register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Lemail" />

    <EditText
        android:id="@+id/Lemail"
        android:layout_width="302dp"
        android:layout_height="51dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="51dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="364dp"
        android:autofillHints="@string/register_email"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="15dp"
        android:hint="@string/register_email"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/Lpassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/FPLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="55dp"
        android:layout_marginStart="247dp"
        android:layout_marginTop="13dp"
        android:text="@string/forgot_passwordlogin"
        android:textColor="#1730CD"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.804" />

    <TextView
        android:id="@+id/TExtlibk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="197dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="53dp"
        android:text="@string/create_new_account"
        android:textColor="#3949AB"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.311"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FPLogin"
        app:layout_constraintVertical_bias="0.486" />

    <ProgressBar
        android:id="@+id/progressBarlogin"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="130dp"
        android:layout_marginEnd="209dp"
        android:layout_marginStart="154dp"
        android:layout_marginTop="175dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/Remail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>