<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2761B8"
    android:textAlignment="center"
    tools:context=".DashBorad">

    <Button
        android:id="@+id/fetchbtn"
        android:layout_width="258dp"
        android:layout_height="48dp"
        android:layout_marginEnd="193dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/btnsignup"
        android:backgroundTint="#000000"
        android:text="@string/fetch_data_from_apibtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.358"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.432" />

    <Button
        android:id="@+id/resetpassword"
        android:layout_width="265dp"
        android:layout_height="59dp"
        android:layout_marginBottom="49dp"
        android:layout_marginEnd="177dp"
        android:layout_marginStart="146dp"
        android:background="@drawable/btnsignup"
        android:backgroundTint="#000000"
        android:text="@string/reset_passwordbtn"
        app:layout_constraintBottom_toTopOf="@+id/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fetchbtn"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/logout"
        android:layout_width="262dp"
        android:layout_height="65dp"
        android:layout_marginEnd="177dp"
        android:layout_marginStart="146dp"
        android:layout_marginTop="444dp"
        android:background="@drawable/btnsignup"
        android:backgroundTint="#000000"
        android:text="@string/logoutbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/nameuser"
        android:layout_width="302dp"
        android:layout_height="51dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="44dp"
        android:background="#2761B8"
        android:drawableLeft="@drawable/user"
        android:drawablePadding="15dp"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282" />

    <EditText
        android:id="@+id/emailuser"
        android:layout_width="302dp"
        android:layout_height="51dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="154dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="17dp"
        android:background="#2761B8"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="15dp"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/mobileuser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameuser" />

    <EditText
        android:id="@+id/mobileuser"
        android:layout_width="302dp"
        android:layout_height="51dp"
        android:layout_marginBottom="54dp"
        android:layout_marginEnd="151dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="10dp"
        android:background="#2761B8"
        android:drawableLeft="@drawable/call"
        android:drawablePadding="15dp"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/fetchbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailuser" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="188dp"
        android:layout_height="129dp"
        android:layout_marginEnd="112dp"
        android:layout_marginStart="111dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058"
        app:srcCompat="@drawable/user" />

</androidx.constraintlayout.widget.ConstraintLayout>